--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,6 +15,9 @@
             <button type="submit">Login</button>
         </div>
     </form>
+
+    <p><a href="{{ url_for('main.reset_request') }}">Esqueceu a senha?</a></p>
+
     <p style="margin-top: 2em;">
         <a href="{{ url_for('main.register') }}">Não tem uma conta? Registre-se</a>
     </p>
