--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
     <h1>Crie sua Conta</h1>
     <form method="POST" action="">
         <div>
-            <label>Usuário</label>
+            <label>Nome</label>
             <input type="text" name="username" required>
         </div>
         <div style="margin-top: 1em;">
